Add settings API spec (ref #18)
