# api/settings.go
@@ -1,0 +1,51 @@
+// lindeb - mau\Lu Link Database
+// Copyright (C) 2017 Maunium / Tulir Asokan
+//
+// This program is free software: you can redistribute it and/or modify
+// it under the terms of the GNU General Public License as published by
+// the Free Software Foundation, either version 3 of the License, or
+// (at your option) any later version.
+//
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
+package api
+
+import (
+	"net/http"
+)
+
+func (api *API) GetSettings(w http.ResponseWriter, r *http.Request) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+func (api *API) AccessSetting(w http.ResponseWriter, r *http.Request) {
+	switch r.Method {
+	case http.MethodGet:
+		api.GetSetting(w, r)
+	case http.MethodPut:
+		api.UpdateSetting(w, r)
+	case http.MethodDelete:
+		api.DeleteSetting(w, r)
+	default:
+		// Invalid methods should be prevented at the router level, so just panic if the router is misconfigured.
+		panic("Fatal: AccessSetting called with invalid method.")
+	}
+}
+
+func (api *API) UpdateSetting(w http.ResponseWriter, r *http.Request) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+func (api *API) GetSetting(w http.ResponseWriter, r *http.Request) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+func (api *API) DeleteSetting(w http.ResponseWriter, r *http.Request) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
